make things wrap correctly

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -6,7 +6,6 @@
 
 .portfolio-link {
   opacity: 0.8;
-  width: 324px;
   height: 499px;
 }
 .portfolio-link:hover {
@@ -14,12 +13,11 @@
 }
 
 .portfolio-item {
-  display: flex;
-  justify-content: center;
   margin-bottom: 25px;
-  margin-top: 100px;
 }
-
+.portfolio-img {
+  margin-bottom: 10px;
+}
 .portfolio-item:last-child {
   margin-bottom: 0px;
 }
